<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
             android:background="@drawable/main_h"
              tools:context="com.wmct.MainActivity">

    <!--android:background="#eceff1"-->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        android:text="@string/welcomeinfo"
        android:textColor="@color/red"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/btn_host"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="360dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/buttoncircle"
        android:text="@string/host"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="800dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/buttoncircle"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="25dp"/>


</RelativeLayout>
