<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/quancheng1"
              android:gravity="center_horizontal"
              android:orientation="vertical"
            >
    <!-- android:background="#eceff1"-->

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="150dp"
        android:text="@string/welcomeinfo"
        android:textColor="@color/red"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/btn_host"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginRight="200dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/buttoncircle"
        android:text="@string/host"
        android:textColor="@color/white"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/btn_join"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginRight="200dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/buttoncircle"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="25dp"/>


</LinearLayout>
